Fix page overflowing

--- a/src/CSBill/CoreBundle/Resources/public/less/theme.less
+++ b/src/CSBill/CoreBundle/Resources/public/less/theme.less
@@ -423,7 +423,6 @@ body {
 .page-heading {
 
     margin-left: -5px;
-    margin-right: -28px;
 
     legend {
         #gradient > .vertical(#ffffff, #eeeeee, 0%, 100%);
